--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <li class="button"><a href="#home"><i class="fa-solid fa-house-user"></i>Home</a></li>
             <li class="button"><a href="#about"><i class="fa-solid fa-user"></i></i>About</a></li>
             <li class="button"><a href="#skills"><i class="fa-solid fa-laptop"></i>Skills</a></li>
-            <li class="button"><a href="#project"><i class="fa-solid fa-paperclip"></i>Project</a></li>
             <li class="button"><a href="#contact"><i class="fa-solid fa-phone"></i>Contact</a></li>
         </ul>
     </nav>
@@ -33,7 +32,7 @@
 <div style="height:100px ;" id="about"></div>
 <div class="about">
      <div class="flex-container1">
-       <div> <img src="Subject.jpg" alt="adviti"></div>
+       <div> <img src="./Subject.jpg" alt="adviti"></div>
        <div>
         <h1 class="heading">About Me:</h1>
         <div class="text">
@@ -47,37 +46,32 @@
     </div>
     </div>
     </div>
-    <br>
 <div style="height:900px ;"class="parallax1">
     <h2 class="heading" id="skills">Skills:</h2>
-    <div> 
-        <ul class="skill">
-        <img scr="html.jpg">
-        <img scr="c-logo-icon-28389.png">
-        <img scr="c-logo-icon-28389.png">
-        <img scr="c-logo-icon-28389.png">
-        <img scr="c-logo-icon-28389.png">
+    <div class="skill"> 
+        <ul>
+        <li><a><img src="./2741555.png" alt="html" style="height:300px;"></a></li>
+        <li><a><img src="./2741566.png" alt="css" style="height:300px"></a></li>
+        <li><a><img src="./C.jpg" alt="C" class="img" style="height:300px" ></a></li>
+        <li><a><img src="./6444857.png" alt="C++" class="img" style="height:300px"></a></li>
     </ul>
 </div>
-   
 </div>
-<div style="height:900px ;background-color: black;">
-    <h2 class="heading" id="project">
-        project
-    </h2>
-
-</div>
-<div style="height:900px ;" class="parallax2">
+<footer style="height:900px ;" class="parallax2">
     <h2 class="heading" id="contact">
         contacts:
     </h2>
-    <div>
+    <div class="contact">
         <ul>
-            
+           <li><a href"#"><i class="fa-brands fa-instagram"></i></a></li>
+           <li><a href"#"><i class="fa-brands fa-twitter"></i></a></li>
+           <li><a href"#"><i class="fa-brands fa-github"></i></a></li>
+           <li><a href"#"><i class="fa-brands fa-linkedin"></i></a></li>
+           <li><a href"#"><i class="fa-solid fa-envelope"></i></a></li> 
         </ul>
     </div>
 
-</div>
+</footer>
    
 </body>
 </html>
