--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <h2 class="heading" id="skills">Skills:</h2>
     <div class="skill"> 
         <ul>
-        <li><a><img src="./2741555.png" alt="html" style="height:300px;"></a></li>
-        <li><a><img src="./2741566.png" alt="css" style="height:300px"></a></li>
-        <li><a><img src="./C.jpg" alt="C" class="img" style="height:300px" ></a></li>
-        <li><a><img src="./6444857.png" alt="C++" class="img" style="height:300px"></a></li>
+        <li><a><img src="./2741555.png" alt="html" class="img"></a></li>
+        <li><a><img src="./2741566.png" alt="css" class="img"></a></li>
+        <li><a><img src="./C.jpg" alt="C" class="img" class="img" ></a></li>
+        <li><a><img src="./6444857.png" alt="C++" class="img"></a></li>
     </ul>
 </div>
 </div>
